# VideojuegoPOO_Cplusplus

./: .gitignore  CMakeLists.txt  g2d.cbp  main.cpp
game/enemigos/: Enemigo.cpp  Enemigo.h
game/enemigos/EnemigoNiv1/: EnemigoNiv1.cpp  EnemigoNiv1.h
game/escenario/: Fondo.cpp  Fondo.h
game/jugador/skin/: ColorFlyweight.cpp  ColorFlyweight.h  Player_1.cpp  Player_1.h
game/utilidades/: Bala.cpp  Bala.h
